began structuring the nav and most sections of the page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/general-style.css" />
     <title>TDSB SHSM</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header section --->
+    <header class="header">
+      <a href="#"
+        ><img class="logo" src="img/Blue and Black OYAP.png" alt=""
+      /></a>
+      <a href="#"
+        ><img class="logo" src="img/SHSM-TDSBinCorner-Logo (2).png" alt=""
+      /></a>
+      <nav class="main-nav">
+        <ul class="main-nav-list"></ul>
+      </nav>
+    </header>
+
+    <!-- end of header section --->
+
+    <!-- hero section --->
+    <main>
+      <section class="hero-section"></section>
+    </main>
+
+    <!-- end of hero section --->
+
+    <!-- shsm component section --->
+
+    <section class="shsm-components"></section>
+
+    <!-- end of  shsm component section --->
+  </body>
 </html>
