fixed the shsm logo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
   <body>
     <!-- header section --->
     <header class="header">
-      <a href="#"
-        ><img class="logo" src="img/Blue and Black OYAP.png" alt=""
-      /></a>
-      <a href="#"
-        ><img class="logo" src="img/SHSM-TDSBinCorner-Logo (2).png" alt=""
-      /></a>
+      <a href="#"><img class="logo" alt="" />TDSB</a>
+      <a href="#"><img class="logo" alt="" />SHSM</a>
       <nav class="main-nav">
         <ul class="main-nav-list"></ul>
       </nav>
