made the homepage and completed the nav bar

--- a/index.html
+++ b/index.html
@@ -3,17 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general-style.css" />
-    <title>TDSB SHSM</title>
+    <title>Specialist High Skills Major (SHSM)</title>
   </head>
   <body>
     <!-- header section --->
     <header class="header">
-      <a href="#"><img class="logo" alt="" />TDSB</a>
-      <a href="#"><img class="logo" alt="" />SHSM</a>
-      <nav class="main-nav">
-        <ul class="main-nav-list"></ul>
+      <a href=""
+        ><img
+          class="logo"
+          alt="SHSM TDSB Logo"
+          src="img/SHSM-TDSBinCorner-Logo.png"
+      /></a>
+      <nav class="main-nav" id="top-page">
+        <ul class="main-nav-list">
+          <li>
+            <a class="main-nav-link" href="">WHAT IS SHSM?</a>
+            <ul class="dropdown">
+              <li><a href="#about-shsm" class="dropdwn-li">About SHSM</a></li>
+              <li>
+                <a href="#shsm-comp" class="dropdwn-li">SHSM COMPONENTS</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="main-nav-link" href="#">WHY SHSM?</a>
+            <ul class="dropdown">
+              <li><a href="" class="dropdwn-li">About SHSM</a></li>
+              <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
+              <li><a href="" class="dropdwn-li">Certifications</a></li>
+              <li><a href="" class="dropdwn-li">Career Exploration</a></li>
+              <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
+              <li>
+                <a href="" class="dropdwn-li"
+                  >Sector Partnered Experiences (SPE)</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="main-nav-link" href="#">SHSM SECTORS</a>
+            <ul class="dropdown">
+              <li><a href="" class="dropdwn-li">About SHSM</a></li>
+              <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
+              <li><a href="" class="dropdwn-li">Certifications</a></li>
+              <li><a href="" class="dropdwn-li">Career Exploration</a></li>
+              <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
+              <li>
+                <a href="" class="dropdwn-li"
+                  >Sector Partnered Experiences (SPE)</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="main-nav-link" href="#">SHSM SCHOOLS</a>
+            <ul class="dropdown">
+              <li><a href="" class="dropdwn-li">About SHSM</a></li>
+              <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
+              <li><a href="" class="dropdwn-li">Certifications</a></li>
+              <li><a href="" class="dropdwn-li">Career Exploration</a></li>
+              <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
+              <li>
+                <a href="" class="dropdwn-li"
+                  >Sector Partnered Experiences (SPE)</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="main-nav-link" href="#">EMPLOYERS</a>
+            <ul class="dropdown">
+              <li><a href="" class="dropdwn-li">About SHSM</a></li>
+              <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
+              <li><a href="" class="dropdwn-li">Certifications</a></li>
+              <li><a href="" class="dropdwn-li">Career Exploration</a></li>
+              <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
+              <li>
+                <a href="" class="dropdwn-li"
+                  >Sector Partnered Experiences (SPE)</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a class="main-nav-link" href="#">CONTACT</a>
+            <ul class="dropdown">
+              <li><a href="" class="dropdwn-li">About SHSM</a></li>
+              <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
+              <li><a href="" class="dropdwn-li">Certifications</a></li>
+              <li><a href="" class="dropdwn-li">Career Exploration</a></li>
+              <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
+              <li>
+                <a href="" class="dropdwn-li"
+                  >Sector Partnered Experiences (SPE)</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -21,15 +116,214 @@
 
     <!-- hero section --->
     <main>
-      <section class="hero-section"></section>
+      <section class="hero-section" id="about-shsm">
+        <div class="hero container">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">WHAT IS SHSM?</h1>
+            <div class="embedded-video">
+              <iframe
+                width="960"
+                height="615"
+                src="https://www.youtube-nocookie.com/embed/pibnrbXJhNc?si=42CvG8UxZ4uEkXcs"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p class="text-description">
+              The Specialist High Skills Major (SHSM) is a specialized high
+              school program in Ontario that allows students to focus their
+              learning on a specific economic sector while earning their Ontario
+              Secondary School Diploma (OSSD). This program offers Toronto
+              District School Board (TDSB) students in Grades 11 and 12 the
+              opportunity to explore a specific area or career of interest and
+              to acquire the skills and experience that will assist them in
+              their post-secondary pathway:
+            </p>
+            <ul class="hero-list">
+              <li class="list-li">Apprenticeship training</li>
+              <li class="list-li">College</li>
+              <li class="list-li">University</li>
+              <li class="list-li">Workplace</li>
+            </ul>
+            <p class="text-description">
+              Upon completion, students receive a high school diploma with an
+              SHSM seal and formal recognition on their Ontario Student
+              Transcript.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- end of hero section --->
 
     <!-- shsm component section --->
 
-    <section class="shsm-components"></section>
+    <section class="shsm-section" id="shsm-comp">
+      <div class="shsm-compo container">
+        <div class="shsm-text-box">
+          <h1 class="heading-primary">SHSM COMPONENTS</h1>
+          <h2 class="heading-secondary">
+            <span class="sec-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </span>
+            BUNDLE OF CREDITS
+          </h2>
+          <p class="text-description">
+            Students complete a specific bundle of 8-10 courses related to their
+            chosen field consisting of:
+          </p>
+          <ul class="shsm-list">
+            <li class="list-li">Four major credits.</li>
+            <li class="list-li">Two to four other required credits.</li>
+            <li class="list-li">
+              A minimum of two required cooperative education credits
+            </li>
+          </ul>
+
+          <h2 class="heading-secondary">
+            <span class="sec-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </span>
+            CERTIFICATIONS
+          </h2>
+          <p class="text-description">
+            They earn Compulsory and Elective certifications connected to the
+            industry: Compulsory certifications or training courses (e.g.,
+            Standard First Aid, CPR level C). Elective certifications and/or
+            training courses, which are selected from a list provided by the
+            Ministry of Education for each sector.
+          </p>
+          <h2 class="heading-secondary">
+            <span class="sec-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </span>
+            CAREER EXPLORATION
+          </h2>
+          <p class="text-description">
+            Students learn about careers in specific economic sectors.
+            Experiential learning and career exploration activities allow
+            students to explore, observe, participate in and reflect on a
+            variety of sector-specific experiences and careers. These activities
+            enable students enrolled in the SHSM program to learn about the
+            opportunities available to them in careers that interest them​
+            (i.e., Skills Canada competition, job shadowing and career
+            fair/panel conference).
+          </p>
+          <h2 class="heading-secondary">
+            <span class="sec-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </span>
+            REACH AHEAD EXPERIENCES
+          </h2>
+          <p class="text-description">
+            These are learning experiences that are connected with the student’s
+            post-secondary plan (i.e., attending a conference/workshop, touring
+            a post-secondary institution, completing a Dual Credit course,
+            etc.).
+          </p>
+          <h2 class="heading-secondary">
+            <span class="sec-icon"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </span>
+            SECTOR POWERED EXPERIENCES (SPE)
+          </h2>
+          <p class="text-description">
+            SPE activities are experiential activities co-delivered with a
+            sector partner. They provide students with the opportunity to gain
+            insight into the relationship between their sector program and how
+            the following are used within the sector:
+          </p>
+          <ul class="shsm-list">
+            <li class="list-li">​Mathematical Literacy</li>
+            <li class="list-li">Contextualized Coding</li>
+            <li class="list-li">
+              ICE (Innovation, Creativity and Entrepreneurship)
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <!-- end of  shsm component section --->
+
+    <!-- footer section --->
+
+    <!-- <section class="footer-section">
+      <div class="footer container">
+        <div class="footer-text-box"></div>
+      </div>
+    </section> -->
+
+    <!-- end of footer section --->
   </body>
+  <link rel="stylesheet" href="script.js" />
 </html>
