made the shsm sector page

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -41,17 +41,7 @@
         </ul>
       </li>
       <li>
-        <a class="main-nav-link" href="#">SHSM SECTORS</a>
-        <ul class="dropdown">
-          <li><a href="" class="dropdwn-li">About SHSM</a></li>
-          <li><a href="" class="dropdwn-li">Bundle of Credits</a></li>
-          <li><a href="" class="dropdwn-li">Certifications</a></li>
-          <li><a href="" class="dropdwn-li">Career Exploration</a></li>
-          <li><a href="" class="dropdwn-li">Reach Ahead Experiences</a></li>
-          <li>
-            <a href="" class="dropdwn-li">Sector Partnered Experiences (SPE)</a>
-          </li>
-        </ul>
+        <a class="main-nav-link" href="sector.html">SHSM SECTORS</a>
       </li>
       <li>
         <a class="main-nav-link" href="#">SHSM SCHOOLS</a>
