--- a/pages/whyshsm.html
+++ b/pages/whyshsm.html
@@ -91,7 +91,7 @@
             </div>
             <div class="card-wrapper">
               <div class="card">
-              <img src="../img/OCTE SHSM.png" class="card-img" alt="...">
+              <img src="../img/OCTE SHSM.png" class="card-img">
               <div class="card-body">
                 <p class="card-text">Post-Secondary Awards & Scholarships. Various Colleges, Universities, and Industry Organizations recognize and recruit Specialist High Skills Major (SHSM) students through specific SHSM bursaries and scholarships.</p>
                 <a href="https://octe.ca/resources/shsm/certifications-and-awareness-training/shsm-post-secondary-connections" class="card-btn" target="_blank">Learn More</a>
